tests/snapshots/examples_fixtures/imports__import_semicolon_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_semicolon_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found `;`.

  examples/imports/import_semicolon_error.flx:4:20
  |
4 | import Modules.Math;
  |                    ^
== stdout ==
<not executed>
